[package]
name = "clurgcoin"
version = "0.1.0"
authors = ["PM <patrick@noumenadigital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
sha2 = "0.9.1"

[dependencies.secp256k1]
version = "0.17.2"
features = ["rand-std"]